Add Location Name to DB
