# ezequiel-backend/src/main/java/com/ezequielvalencia/backend/models/db/GeoCacheDBModel.java
@@ -1,11 +1,8 @@
 package com.ezequielvalencia.backend.models.db;
 
 import jakarta.persistence.*;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 
 import java.io.Serializable;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 
 @Table(name = "geo_cache")
@@ -17,19 +14,22 @@ public class GeoCacheDBModel implements Serializable{
 
     public String username;
     public String note;
-    public String latitude;
-    public String longitude;
+    public String location_name;
+    public Double latitude;
+    public Double longitude;
     public String secret;
     public LocalDateTime date;
 
     public GeoCacheDBModel(){}
 
-    public GeoCacheDBModel(String username, String note, String secret, LocalDateTime date, String latitude, String longitude){
+    public GeoCacheDBModel(String username, String note, String secret, LocalDateTime date,
+                           Double latitude, Double longitude, String location_name){
         this.username = username;
         this.note = note;
         this.secret = secret;
         this.date = date;
         this.latitude = latitude;
         this.longitude = longitude;
+        this.location_name = location_name;
     }
 }
